--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "author": "vibhor",
   "license": "ISC",
   "dependencies": {
+    "connect": "^3.7.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
+    "mongo": "^0.1.0",
     "mongoose": "^5.11.8",
+    "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
